--- a/src/body/body.css
+++ b/src/body/body.css
@@ -7,7 +7,7 @@ padding: 200px 250px 100px 250px;
     grid-template-rows: 425px;
     gap: 20px;
 }
-button{
+.button{
     background-color: black;
     color: white;
     font-family: 'Roboto Mono', monospace;
