--- a/src/allProducts/allProduct.css
+++ b/src/allProducts/allProduct.css
@@ -19,13 +19,13 @@ li:hover{
 }
 .cartContainer{
     display: grid;
-    grid-template-columns: repeat(4,300px);
+    grid-template-columns: repeat(3,300px);
     grid-template-rows: repeat(4,300px);
     justify-content: center;
-    gap: 20px;
+    gap: 90px;
 }
 .card{
-    overflow: hidden;
+    /* overflow: hidden; */
     border: 1px solid black;
     background-color: white;
     padding: 10px 10px;
@@ -37,12 +37,13 @@ img{
     height: auto;
     object-fit: contain;
 }
-button{
+.button{
     background-color: black;
     color: white;
     font-family: 'Roboto Mono', monospace;
     padding: 10px 10px;
     border-bottom-left-radius: 14px;
+    text-decoration: none;
 }
 h1{
     font-size: 15px;
